argo-gpol/argo-cluster-generation-from-rancher-capi/.chainsaw-test/clusters.yaml
kind: Cluster
apiVersion: provisioning.cattle.io/v1
metadata:
  labels:
    foo: bar
  name: sample-cluster
  namespace: argo-rancher-cluster-ns
spec:
  rkeConfig:
    machinePools:
      - name: machine01
        controlPlaneRole: true
        quantity: 1
        machineConfigRef:
          apiVersion: elemental.cattle.io/v1beta1
          kind: MachineInventorySelectorTemplate
          name: configref01
---
apiVersion: provisioning.cattle.io/v1
kind: Cluster
metadata:
  name: rancher-cluster
  namespace: argo-rancher-cluster-ns
spec:
  rkeConfig:
    machinePools:
    - controlPlaneRole: true
      machineConfigRef:
        apiVersion: elemental.cattle.io/v1beta1
        kind: MachineInventorySelectorTemplate
        name: configref01
      name: machine01
      quantity: 1
---
apiVersion: provisioning.cattle.io/v1
kind: Cluster
metadata:
  name: local
  namespace: fleet-local
spec:
  rkeConfig:
    machinePools:
    - controlPlaneRole: true
      machineConfigRef:
        apiVersion: elemental.cattle.io/v1beta1
        kind: MachineInventorySelectorTemplate
        name: configref01
      name: machine01
      quantity: 1
