argo-gpol/argo-cluster-generation-from-rancher-capi/.chainsaw-test/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-rancher-cluster-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: fleet-local
