argo-gpol/argo-cluster-generation-from-rancher-capi/.chainsaw-test/secret-generated02.yaml
apiVersion: v1
kind: Secret
metadata:
  name: cluster-rancher-cluster
  namespace: argocd
  labels:
    argocd.argoproj.io/secret-type: cluster
    clusterId: rancher-cluster
type: Opaque
data:
  name: "Y2x1c3Rlci1yYW5jaGVyLWNsdXN0ZXI="
  server: "aHR0cHM6Ly8xMjcuMC4wLjE6MTIzNDU="
  config: "ewogICJiZWFyZXJUb2tlbiI6ICJmb28iLAogICJ0bHNDbGllbnRDb25maWciOiB7CiAgICAiaW5zZWN1cmUiOiBmYWxzZSwKICAgICJjYURhdGEiOiAiWW1GeUNnPT0iCiAgfQp9Cg=="
