argo-gpol/argo-cluster-generation-from-rancher-capi/.chainsaw-test/secret-not-generated.yaml
apiVersion: v1
kind: Secret
metadata:
  name: cluster-local
  namespace: argocd
